public class Ausgangsschranke {
    public void oeffnen() {
        System.out.println("Ausgangsschranke öffnet sich.");
    }
}