public class Eingangsschranke {
    public void oeffnen() {
        System.out.println("Eingangsschranke öffnet sich.");
    }
}